--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			body {
 				font-family: sans-serif;
 				font-size: 11px;
-				background-color: #000;
+				background-color: transparent;
 				margin: 0px;
 			}
 			canvas {
