--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ let pendingAnimation = null;
 // NOTA: En Wix, usa la URL completa de tu archivo (https://...) 
 // si el modelo no carga.
 loader.load(
-  './howie_anims_v2.glb', 
+  './howie_anims_v3.glb', 
   (gltf) => {
     const model = gltf.scene;
     scene.add(model);
@@ -89,7 +89,7 @@ loader.load(
       playAnimation(pendingAnimation, allAnimations);
       pendingAnimation = null; 
     } else {
-      playAnimation('animacion 1', allAnimations);
+      playAnimation('idle', allAnimations);
     }
   },
   undefined,
@@ -130,21 +130,16 @@ window.parent.postMessage("ready", "*");
 function playAnimation(name, animations) {
   const clip = THREE.AnimationClip.findByName(animations, name);
 
-  console.log("current anim name")
-  console.log(name)
-  console.log("current anim object")
-  console.log(animations)
-
   if (!clip) {
     console.warn(`Animation "${name}" not found`);
     return;
   }
 
-  const action = mixer.clipAction(clip);
+  let action = mixer.clipAction(clip);
 
   if(currentAction == action){
     console.log("same animation")
-    return
+    action = mixer.clipAction(THREE.AnimationClip.findByName(animations, "idle"));
   }
 
   if (currentAction) {
@@ -209,7 +204,7 @@ function onPointerDown(event) {
         console.log('Object clicked:', clickedObject.name);
 
         // Call your custom function here
-        playAnimation('animacion 2', allAnimations);
+        playAnimation('greet', allAnimations);
     }
 }
 
