last commit typo

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ function onPointerDown(event) {
         console.log('Object clicked:', clickedObject.name);
 
         // Call your custom function here
-        playAnimation('greet', allAnimations);
+        playAnimation(clickAnimation, allAnimations);
     }
 }
 
